--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
+body {
+  margin: 0;
+}
+
 .header {
   display: flex;
+  justify-content: space-between;
   background-color: rgb(50, 167, 145);
+}
+
+.trybewarts-login {
+  display: flex;
 }
