--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,12 @@ body {
 .trybewarts-login {
   display: flex;
 }
+
+main {
+  display: flex;
+}
+
+#evaluation-form {
+  display: flex;
+  width: 675px;
+}
