--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,22 @@ main {
   flex-direction: column;
 }
 
-#trybewarts-forms-logo{
+#trybewarts-forms-logo {
     height: 500px;
 }
 
+#counter {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  margin-bottom:5px;
+}
+
+#text {
+position: relative;
+}
+
+#textarea {
+ resize: none;
+ width: 100%;
+}
